fix: updated docusaurus and fix dark mode, but waiting for algolia to provide appId for search to work

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -21,3 +21,7 @@ blockquote {
     background-color: #334756;
   }
 }
+
+[data-theme="dark"] .styled-tag {
+  color: #334756;
+}
